infrastructure/kibana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kibana-httproute
  namespace: elastic-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: internal-gateway
    namespace: envoy-gateway
    sectionName: http
  hostnames:
  - "localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /kibana
    backendRefs:
        - group: ''	
          kind: Service	
          name: kibana-kb-http
          port: 5601
          weight: 1
